# cielo-edi

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ps1
src/cielo_edi/: __init__.py  cli.py  dominios.py  models.py  parser.py
src/cielo_edi/exporters/: __init__.py  csv_exporter.py  json_exporter.py
tests/: conftest.py  pytest.ini  test_cli.py  test_dominios.py  test_exporters.py  test_integracao.py  test_models.py  test_parser.py  test_seguranca.py
