[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cielo-edi"
version = "15.14.1"
description = "Parser Cielo EDI: converte CIELO03/04/09/15/16 para JSON/CSV"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Jonas Hamerski", email = "contato@hathdata.com"}]
keywords = ["cielo", "edi", "extrato", "conciliacao", "parser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.5,<3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=5.0", "ruff>=0.6.0", "mypy>=1.11"]

[project.scripts]
cielo-edi = "cielo_edi.cli:main"

[project.urls]
Repository = "https://github.com/jhamerski/cielo-edi"

[tool.hatch.build.targets.wheel]
packages = ["src/cielo_edi"]

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["cielo_edi"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=cielo_edi --cov-report=term-missing"

[tool.coverage.run]
source = ["src/cielo_edi"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__ == .__main__.:"]
